--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     </div>
                     <nav class="header__menu">
                         <div class="header__btn">
-                            <span class="header__btn-row"></span>
-                            <span class="header__btn-row"></span>
-                            <span class="header__btn-row"></span>
+                            <span class="header__btn-row top"></span>
+                            <span class="header__btn-row middle"></span>
+                            <span class="header__btn-row bottom"></span>
                         </div>
                         <ul class="firstline__menu">
                             <li class="firstline__item"><a href="#" class="firstline__link">услуги</a></li>
