--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="container">
                 <div class="topline__inner">
                     <div class="topline__languages">
-                        <a href="#" class="topline__languages topline__languages--active">рус</a>
-                        <a href="#" class="topline__languages">eng</a>
-                        <a href="#" class="topline__languages">fr</a>
+                        <a class="topline__languages topline__languages--active" href="#">рус</a>
+                        <a class="topline__languages" href="#">eng</a>
+                        <a class="topline__languages" href="#">fr</a>
                     </div>
                     <a href="tel:88001234567" class="topline__pone">8 (800) 123-45-67</a>
                     <a href="mailto:sales@log.ru" class="topline__mail">sales@log.ru</a>
@@ -260,7 +260,7 @@
                 <address class="footer__adress-email">
                     <div class="footer__adress">123456, Санкт-Петербург, Невский пр-кт 127</div>
                     <a class="footer__email" href="mailto:sales@log.ru">sales@log.ru</a>
-                </address class="footer__adress">
+                </address>
                 <div class="footer__phones">
                     <a class="footer__phone" href="tel:78123445665">+7 (812) 344-56-65</a>
                     <a class="footer__phone" href="tel:78123555665">+7 (812) 355-56-65</a>
